@@ -4,22 +4,18 @@ AUX python-2.4.4-test-cross.patch 977 RMD160 8fdcd45dc202993988f7a1c2b3d91806888
 AUX python-2.5-cross-printf.patch 903 RMD160 8dc0ee148120aaf7667624bdb5574bb6af5d2a00 SHA1 596e05be8cde43e4cdd87c8ed06ebb40828f7cea SHA256 1e91e5123d74d89aa8fc9dc60d98516b785f851e43da9b634ae535130e24e780
 AUX python-2.6-chflags-cross.patch 1716 RMD160 b0ec772a41a24d51f4c7430b19bcc6251cd6be87 SHA1 4745cd53cef503c41c50573ad97f40eb89fd4bcd SHA256 7c36689db47720052069725036983c2fb6959f425e3777aae55976b2788d463f
 AUX python-2.6-test-cross.patch 914 RMD160 1f421b5565d39a24b887e85cbecaf3857741f756 SHA1 9c05fbe28aac6373f24317db5c277bc4549dde0c SHA256 8264f6ffe5aedcce67bea00b0346e5416a5486da2229bf82fe748d87ec65c4de
-AUX python-config-2.4 179 RMD160 087417fb7080be00cf62381d5e16fb4e4cb4538f SHA1 3ffffc6e4f4c7b774135f2635601b92a5b13e259 SHA256 86b87546be79ee6027df70046b33808b64921eea71618c81810e6b1280604221
 AUX python-config-2.4-r1 1624 RMD160 e4e6893c9e8414289c0c70c0f4be58835911e376 SHA1 addf9a6eb81e636364264a6abb3d96f01ea0cf90 SHA256 923a9e896f99cca5aa4ccbb02f981c6e26a2b1aa42326de2359d3c884bde2a9f
 DIST Python-2.4.6.tar.bz2 8154677 RMD160 0687989193dec2ac108142759281be7ddcf7f31e SHA1 cb1972a554a458f6a26d3e047b359251865d7c96 SHA256 da104139ad3f4534482942ac02cf8f8ed9badd370ffa14f06b07c44914423e08
 DIST Python-2.5.4.tar.bz2 9821313 RMD160 3a76c83464c3b1c38a60351ab054e33ac7195663 SHA1 0f2e819d6381f72f26c734e00a6780b3933ea404 SHA256 bc8d896a2bfe5523ba93b8d89b71017b74e8e6cb21dc676a0ccff668c8780110
 DIST Python-2.6.2.tar.bz2 11156901 RMD160 85fa3540cbacf4d0547d2381eb3aa76bef35c2e1 SHA1 125d4ed90f82de1d44f288150bbbda23a6cd27a4 SHA256 a1cdc4a8f6c1f947ea3b87d097af2db4371019bac941d92c3844124c5694328b
 DIST Python-3.1.1.tar.bz2 9757032 RMD160 d60b64e1346b2ff15d65b032ea35fb3ad8b0dc66 SHA1 42eb37bf75fae5731f6df1b195902960ae1789e0 SHA256 d87cc2578abade3ac1124b2b8e63146b1201726279d44cdde37fdd59553b51fd
-DIST Python-3.1.tar.bz2 9510460 RMD160 e41d8fd9c24d567f05835a1f9de6ba679ce2fd38 SHA1 f8c610f47e6c9420314e48871b9c697a93ed2e42 SHA256 81621be3c850190f386ddb3d8fbd4c3154bfc095eee6755ca52773fe5075ce3d
 DIST python-gentoo-patches-2.4.6.tar.bz2 10983 RMD160 c06dc76edec86d708a0c0e37126ae50f49f61bd3 SHA1 bbc04083fe74cff8c723c5c3cab70b1b814c987f SHA256 0508a66408f218c655823303833599344d2edeec1ffc683c6ada3fc33731590d
 DIST python-gentoo-patches-2.5.4-r2.tar.bz2 20722 RMD160 86c25ad3647b7a3ca44c8e781a4572187d6c1934 SHA1 a859d75092303ee445cebd7af4221beeed58b74d SHA256 54236f25147bb26e15f6f204975513515410292a343b6dfb2116806aa9123afc
 DIST python-gentoo-patches-2.6.2-r4.tar.bz2 11802 RMD160 d04d80d3ed2ead001dbdbe24a89e8cfe5e6e56c7 SHA1 eca475efb4dd47f688fa49d510ae8f53afe3dff0 SHA256 a0b881c332991aafd885a337432c9ef3c4a29d41ed50898e12261801aad6f83a
 DIST python-gentoo-patches-3.1.1-r1.tar.bz2 8545 RMD160 9893c8bab409790548e2e88658ce8a49fb49e3f9 SHA1 3423bf03e5e08af1747cfa2e7173f9ae55cdc521 SHA256 2e4f6b3bb13b1658314ebf165e8b82948d33314539a0f1ef0e102f86716f7962
-DIST python-gentoo-patches-3.1.tar.bz2 8306 RMD160 ca4a52978de74d7175fe54ebdaec5b9ed05ce6da SHA1 f3a33485bef8c51f9c1214ee179b869a4fb44004 SHA256 ab68c9bd6d9991b6e4ae45d0d1551c8189c027c20aedf0e6b54c889e11eebf83
 EBUILD python-2.4.6.ebuild 9044 RMD160 67aa4eeb06425f6a013d1aa2eb4fdcb43e8002c7 SHA1 234bcac7f24dc4c286c3dd32e1ff7512bceb54f2 SHA256 6c47a960d14d0e57b06556b025c73357ad52fc777d0d60f03a13861db9b18c14
 EBUILD python-2.5.4-r3.ebuild 9163 RMD160 1098d1a699c0978bf0bba8ac3d9b554d65905020 SHA1 054ac4de4c7d7076de68bc71a09d67b08917c87c SHA256 c77f42c110e2eb7fa11e9e7bd31050f0b9c2f0f60595890fa6919a08d6c0c3e4
 EBUILD python-2.6.2-r1.ebuild 9536 RMD160 7b7ef084eb5ec27532e7f88d5def1117eec3743e SHA1 3f9d35c283b4c817de780bc5ad6ff19a1635e76b SHA256 8fd827aa5edf50066362ace8b57b7b00a42cf25e1b110674f5ef0bfaf5d747e7
 EBUILD python-3.1.1.ebuild 8230 RMD160 c6081723a73a16a77ab22ccf0b73d490fdaa970f SHA1 f58905246e9e2e5cb303b778dc36526c788b43c8 SHA256 b8afd52ef3626e0517888c8e365404f37a812939bfbe537ea6eb6c57b5901268
-EBUILD python-3.1.ebuild 7988 RMD160 e737a483e87a3d169a8787f68433af36132e9696 SHA1 fc0f8ca3ec1e282b6d3e030a0af1c5269b4edc20 SHA256 5af6bef348b5f62c88a0f95d7e5b2fda20268acb44a8de50bad632ac9866e81d
-MISC ChangeLog 71814 RMD160 2a349a1790db453b0d1923013cdd4a0cd5468981 SHA1 50490b8d3f0dfd45ddd06238ee8db78906744b26 SHA256 388a8c3ea66cb9bb79f15d69e620740897ce246837e10dfa770f87f3c539c181
+MISC ChangeLog 71980 RMD160 b45a1d427b9c96dd6553a5efe5814b4c2e89e3cb SHA1 5be8a15d77e12ce5fb1cc69d4bb9e08797936dc8 SHA256 cb21a6d8399941e4d17d1c86f912b794a50cad70744c8bb273b1b6f19fbb8d34
 MISC metadata.xml 501 RMD160 0cc2c851a7c59ed77809c1f3ac2130710f0700e9 SHA1 59bfd447cf15419f68077913de7228f3556ce6e3 SHA256 51c09ee221463f34722a6c655db605a7d6d683069453d173947e4416a43a071c
