@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.411 2009/09/05 17:22:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.412 2009/09/06 21:12:15 arfrever Exp $
+
+  06 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -files/python-config-2.4, -python-3.1.ebuild:
+  Delete old ebuild and old python-config.
 
   05 Sep 2009; Raúl Porcel <armin76@gentoo.org> python-2.6.2-r1.ebuild:
   ia64/sparc stable wrt #277645
